Url for customer stories,Product Videos, Feedbacks

--- a/templates/live/company_profile/comp_profile_show.html
+++ b/templates/live/company_profile/comp_profile_show.html
@@ -39,7 +39,7 @@
                      
                 </div>
                 
-            <h2> {{_("Company Profile")}} </h2>
+            <h2> {{_("Buffer")}} </h2>
             
 
            <span ng-show="account.account_type">{{_("Type")}}: <a class="tag" href="/#/search/type:Account <%=account.account_type%>">#<%=account.account_type%></a></span>
