--- a/templates/live/product_videos/product_videos_list.html
+++ b/templates/live/product_videos/product_videos_list.html
@@ -84,12 +84,12 @@
         <div class="row-fluid">
           
           <div class="span12">
-            <h2>{{ _("Shows") }} </h2>
+            <h2>{{ _("Product Videos") }} </h2>
             
             <div class="btn-group">
             
                     <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("Schedule a show") }} <i class="icon-plus"></i>
+                    {{ _("Add Product Video") }} <i class="icon-plus"></i>
                     </button>
             </div>
                
