About on show detail

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -128,7 +128,7 @@
               <!-- BEGIN PORTLET-->
               <div class="portlet paddingless">
                 <div class="portlet-title line">
-                  <div class="caption">Account Feeds</div>
+                  <div class="caption">Lead Feeds</div>
                   
                 </div>
                 <div class="portlet-body">
